# min_model

./: .gitignore  CODE_WIKI.md  Git使用说明.md  README.md  pyproject.toml  requirements.txt  拖入数据后批量训练三个模型.bat
.codex/skills/data-analysis-assistant/agents/: openai.yaml
.codex/skills/data-analysis-assistant/references/: analysis-checklist.md
.codex/skills/fintech-risk-strategy-analyst/agents/: openai.yaml
.codex/skills/fintech-risk-strategy-analyst/references/: metric-framework.md
.codex/skills/risk-feature-binning-analyst/: SKILL.md
.codex/skills/risk-feature-binning-analyst/agents/: openai.yaml
.codex/skills/risk-feature-binning-analyst/references/: binning-review-checklist.md  weekly-report-template.md
.codex/skills/risk-feature-binning-analyst/scripts/: weekly_ma_check.py  (+6 more)
configs/: default_config.json  field_config.json
daily_scripts/: .gitignore  README.md  extract_financial_sms.py  extract_financial_sms_v2.py  extract_financial_sms_v3_1.py  feature_woe_analysis.py  feature_woe_web_app.py  run_translate.py  translate_filtered_sms_results.py  translate_filtered_sms_results_v1.py  translate_filtered_sms_results_v2.py
daily_scripts/config/: feature_display_config.json  feature_sheet_output_config.json
docs/: cleanup_scope.md  project_layout.md  structure_experiment_summary.csv  test_result.md
legacy/: README.md
scripts/: run_all_models.py  run_training.py
src/risk_model/: __init__.py  cli.py  trainer.py  woe.py
src/risk_model/exporters/: __init__.py  artifacts.py
src/risk_model/utils/: __init__.py  woe_tools.py
tests/: test_model_trainer.py
(+2 files in other folders)
